Revision history for Perl extension Net::Server.

0.81  Nov 19 12:39 2001
        - Fix Net::Server::Fork - Bug in forking server
          once parent has reached max_servers caused
          slow infinite loop and no processing of connections.
        - Some perldoc cleanups

0.80  Nov 14 09:30 2001
        - Fix Net::Server::Multiplex::MUX::mux_eof
          to pass a ref to the remaining data.

0.79  Oct 23 12:00 2001
        - Added Net::Server::Multiplex
        - NOTE: IO::Multiplex >= 1.01 is required
          to use this personality.

0.78  Sep 28 9:13
        - Added post_child_cleanup_hook to server_close
        - Moved pre_server_close_hook inside server_close
        - Various small cleanups
        - Added no_close_by_child flag (see perldoc)

0.77  Aug 27 10:00
        - Added dequeuing ability to Fork mode server.
        - All Fork and PreFork modes now have dequeue ability.

0.76  Aug 24 11:16
        - Added Net::Server::PreForkSimple
                - Simpler PreFork server that only attempts to
                  maintain a constant number of child servers.
                - Changed Net::Server::PreFork to subclass
                  off of Net::Server::PreForkSimple.  No
                  functional changes.
                - Fixed a bug in Net::Server::Daemonize::set_user.
                - Fixed syntax bug on 5.005_03 in Proto's

0.75  Aug 23 10:49
        - Both Net::Server::Fork and Net::Server::PreFork are
                using safe signals via Net::Server::SIG.
        - Net::Server::PreFork has new child managment model.
                NOTE: spare_servers is no longer used.  It
                has been replaced by min_spare_servers and
                max_spare_servers.  This is a major change.
                The server will die if these parameters are
                not properly set.
                - operates better under high loads
                - provides better clean up of waiting servers.
                - more configurable.