@@ -4,6 +4,18 @@
 package Net::Server::Test;
 use Test;
 
+BEGIN {
+  if( ! eval{ require IO::Multiplex; } ){
+    $| = 1;
+    print "1..1\n";
+    my $str = "IO::Multiplex not installed.";
+    warn $str ."\n";
+    warn "Net::Server::Multiplex requires IO::Multiplex\n";
+    skip $str,1;
+    exit;
+  }
+}
+
 BEGIN { $| = 1; plan tests => 4; $success = 0; }
 END { ok 0 unless $success; }
 
